# knowledge-engine

./: .bandit  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: test.yml
cron/: connection-finder.json  inbox-processor.json  morning-brief.json  nightly-lint.json  weekly-digest.json
cron/windows/: connection-finder.ps1  inbox-processor.ps1  morning-brief.ps1  nightly-lint.ps1  register-cron.ps1  weekly-digest.ps1
docs/: FUNCTIONAL_GAPS.md  ai-models.md  architecture.md  customization.md  daily-workflow.md  faq.md  getting-started.md  installation-windows.md
scripts/: sanitize-check.sh  setup.cmd  setup.py  setup.sh  verify.cmd  verify.py  verify.sh
skills/vault-capture/: SKILL.md
skills/vault-digest/: SKILL.md
skills/vault-forward-refs/: SKILL.md
skills/vault-import/: SKILL.md
skills/vault-init/: SKILL.md
skills/vault-link/: SKILL.md
skills/vault-lint/: SKILL.md
skills/vault-morning-brief/: SKILL.md
skills/vault-query/: SKILL.md
skills/vault-sync/: SKILL.md
tests/: test_basic.py  test_comprehensive.py
vault/: CLAUDE.md  Knowledge Archive Home.md  README.md
vault/00 Inbox/: README.md
vault/01 Identity/: README.md
vault/02 Principles/: README.md
vault/03 Projects/: README.md
vault/04 Knowledge Library/: README.md
vault/05 Framework Library/: README.md
(+41 files in other folders)
